<resources>
    <string name="app_name">FoodTruckFinderMiTruck</string>
    <string name="title_text">Food Truck Finder Mi</string>
    <string name="email_hint">Email</string>
    <string name="trucks">Trucks</string>
    <string name="signup_hint">Signup</string>
    <string name="foodtype_spinner">FoodType:</string>
    <string name="truck_name_hint">Truck Name</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>
    <string name="dashboard_tab">Dashboard</string>
    <string name="open_truck_hint">Open Truck</string>
    <string name="close_truck_hint">Close Truck</string>
    <string name="events_tab_text">Events</string>
    <string name="settings_hint">Settings</string>
    <string name="reviews_title">Reviews</string>
    <string name="create_event_hint">Create Event</string>
    <string name="event_date_hint">Event Date</string>
    <string name="event_name_hint">Event Name</string>
    <string name="event_description_hint">Event Description</string>
    <string name="event_city_hint">City</string>
    <string name="event_submit_hint">Submit</string>
    <string name="back_hint">Back</string>
    <string name="website_url">Website URL</string>
    <string name="food_type">Food Type</string>
    <string name="save_changes">Save Changes</string>
    <string name="reset_password">Reset Password</string>
    <string name="required_hint">Required</string>
    <string name="optional_hint">Optional</string>
    <string name="profile_pic_desc">Your Profile Picture</string>
    <string name="select_profile_pic_hint">Pick Profile Pic</string>


    <string-array name="FoodTypes">
        <item>Comfort</item>
        <item>Mexican</item>
        <item>Street Food</item>
        <item>Chinese</item>
        <item>American</item>
        <item>Desert</item>
        <item>Desert</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="going_hint">Going</string>
    <string name="not_going_hint">Cancel Going</string>
    <string name="info_hint">Info</string>
    <string name="click_to_continue">Click to Continue</string>

</resources>