<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.DashboardFragment">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dashboardTitleLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/dashboard_tab"
                android:textAlignment="center"
                android:textSize="40sp" />

            <Button
                android:id="@+id/openButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/open_truck_hint" />

            <Button
                android:id="@+id/settingsExpandButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/gray"
                android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_down_24"
                android:text="@string/settings_hint"
                android:textAlignment="textStart"
                tools:ignore="TextContrastCheck" />

            <LinearLayout
                android:id="@+id/settingLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shadow_background"
                android:baselineAligned="false"
                android:orientation="vertical"
                android:padding="32dp"
                android:visibility="gone">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    app:startIconDrawable="@drawable/ic_baseline_email_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email_hint"
                        android:inputType="textEmailAddress"
                        android:textSize="20sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    app:startIconDrawable="@drawable/ic_baseline_link_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/websiteEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/website_url"
                        android:textSize="20sp"
                        tools:ignore="TextContrastCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    app:startIconDrawable="@drawable/ic_baseline_fastfood_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/foodTypeEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/food_type"
                        android:textSize="20sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/saveChnagesButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/save_changes" />

                <Button
                    android:id="@+id/picProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/select_profile_pic_hint" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/profile_pic_desc"
                    tools:srcCompat="@tools:sample/avatars" />

                <Button
                    android:id="@+id/submitProfileButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:text="@string/event_submit_hint" />

            </LinearLayout>

            <Button
                android:id="@+id/reviewExpandButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/gray"
                android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_down_24"
                android:text="@string/reviews_title"
                android:textAlignment="textStart"
                tools:ignore="TextContrastCheck" />

            <ListView
                android:id="@+id/reviewList"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="1dp"
                android:fastScrollEnabled="false"
                android:isScrollContainer="false"
                android:nestedScrollingEnabled="false"
                android:paddingBottom="16dp"
                android:visibility="gone"
                tools:ignore="NestedScrolling"
                tools:listitem="@layout/list_item" />


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>