<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signupRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignupActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/french_fry_image" />

            <TextView
                android:id="@+id/signupTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-200dp"
                android:text="@string/title_text"
                android:textColor="@color/white"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/trucksText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/trucks"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="600dp"
                android:background="@drawable/shadow_background"
                android:gravity="clip_vertical|center_horizontal"
                android:orientation="vertical"
                android:padding="32dp">

                <TextView
                    android:id="@+id/signupTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup_hint"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/requiredLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/required_hint" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    app:startIconDrawable="@drawable/ic_baseline_account_circle_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/truckNameEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/truck_name_hint" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    app:startIconDrawable="@drawable/ic_baseline_email_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email_hint" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    app:startIconDrawable="@drawable/ic_baseline_fastfood_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/foodTypeEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/food_type" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    app:startIconDrawable="@drawable/ic_baseline_lock_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passwordEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password_hint" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/optionalLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/optional_hint" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    app:startIconDrawable="@drawable/ic_baseline_location_on_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/cityEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/event_city_hint" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    app:startIconDrawable="@drawable/ic_baseline_link_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/websiteEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/website_url" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/signupButtonConfirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:minHeight="48dp"
                    android:text="@string/signup_hint"
                    tools:ignore="DuplicateSpeakableTextCheck" />

            </LinearLayout>

            <Button
                android:id="@+id/signupBackButton"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="start"
                android:text="@string/back_hint" />

        </LinearLayout>
    </ScrollView>

</ScrollView>