<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EventInfoActivity"
    tools:ignore="SpeakableTextPresentCheck">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/goingAmountLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito"
                android:textColor="@color/black"
                android:textSize="34sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/imageView4"
                app:layout_constraintEnd_toEndOf="@+id/imageView4"
                app:layout_constraintStart_toStartOf="@+id/imageView4"
                app:layout_constraintTop_toTopOf="@+id/imageView4"
                tools:text="222" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="119dp"
                android:layout_height="117dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:importantForAccessibility="no"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="w,1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/EventNameLabel"
                app:layout_constraintVertical_bias="1.0"
                app:layout_optimizationLevel="ratio"
                app:srcCompat="@drawable/yellow_outline"
                tools:ignore="ImageContrastCheck" />

            <ImageButton
                android:id="@+id/eventInfoBackButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="@android:color/transparent"
                android:contentDescription="@string/back_hint"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_arrow_back_ios_48"
                app:tint="@color/black"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/EventNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:fontFamily="@font/nunito"
                android:textColor="@color/black"
                android:textSize="40sp"
                android:textStyle="bold"
                android:typeface="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/event_name_hint" />

            <Button
                android:id="@+id/goingButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:backgroundTint="@color/gray"
                android:elevation="6dp"
                android:text="@string/going_hint"
                android:textColor="@color/black"
                app:icon="@drawable/ic_baseline_star_24"
                app:iconTint="@color/gold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView4"
                app:layout_constraintTop_toBottomOf="@+id/EventNameLabel" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/infoTabButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:backgroundTint="@color/gold"
                android:text="@string/info_hint"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/trucksTabButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:backgroundTint="@color/gray"
                android:text="@string/trucks"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/reviewsTabButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:backgroundTint="@color/gray"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/reviews_title"
                android:textColor="@color/black" />
        </LinearLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/EventInfoViewPager"
            android:layout_width="match_parent"
            android:layout_height="555dp" />

    </LinearLayout>
</ScrollView>